LL-873 LL-874 #resolve Hovered element title will be displayed below.
If the element is hovered in the Timeline, then the title/label will be
displayed on the next line. This should resolve the issue of
overlapping.

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,18 @@ img.small-icon {
     overflow: visible;
 }
 
+.timeline-event .entity:hover .labelable .withlabel {
+	position: relative;
+	top: 10px;
+	background-color: #fff;
+	z-index: 999;
+	display: inline-block;
+}
+
+.timeline-cluster .entity:hover .labelable .withlabel {
+	top: 5px;
+}
+
 .labelable label, .labelable text {
     text-align: left;
     border: 0 none;
